--- a/package.json
+++ b/package.json
@@ -9,16 +9,22 @@
   },
   "dependencies": {
     "@radix-ui/react-popover": "^1.1.2",
+    "@reduxjs/toolkit": "^2.5.0",
+    "@stomp/stompjs": "^7.0.0",
     "@tailwindcss/forms": "^0.5.7",
     "chart.js": "^4.4.1",
     "chartjs-adapter-moment": "^1.0.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
     "moment": "^2.29.4",
     "react": "^19.0.0",
     "react-day-picker": "^9.4.1",
     "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.2",
     "react-transition-group": "^4.4.5",
+    "redux-persist": "^6.0.0",
+    "sockjs-client": "^1.6.1",
     "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
